:sparkles: feat[translation]: Implemented Localizer
:globe_with_meridians: feat[translation]: Implemented Baselanguages (German, English)
:memo: change[apispecs]: changed base strukture + reimplement
:goal_net: feat[errors]: Implemented Custom Error Messages
:sparkles: fix[api]: Reimplementet routes
